# bee-core-definitions

./: README.md  pyproject.toml
.github/prompts/: global.prompt.md
examples/: protocol_example.py
src/bee_core_definitions/: __init__.py  credit_code.py  protocol.py
tests/: test_credit_code.py  test_protocol.py
