[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bee-core-definitions"
version = "0.1.0"
description = "统一项目中不同代码的字典等定义"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "AbelChe" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/AbelChe/bee-core-definitions"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bee_core_definitions = ["py.typed"]
